--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,7 +10,7 @@
     <div class="header">
       <div class="header navbar navbar-expand flex-md-row bd-navbar">
         <div class="container d-sm-flex">
-          <div class="navbar-header d-none d-md-flex" id="navbar-header" data-turbolinks-permanent>
+          <div class="navbar-header d-none d-md-flex" data-turbolinks-permanent>
             <%= link_to("控制台", main_app.admin_root_path, class: "navbar-brand") %>
           </div>
           <div class="navbar-nav-scroll">
@@ -43,7 +43,6 @@
               已修改了系统设置，需要重启应用方可生效 <%= link_to icon_tag("power-off", label: "立即重启"), reboot_admin_dashboards_path, data: { method: :post, confirm: "你确定要重启 Homeland 吗？", disable_with: "请求中..." }, class: "text-danger pull-right" %>
             </div>
           <% end %>
-
           <%= notice_message %>
           <%= yield %>
         </div>
