--- a/app/javascript/homeland/_vars.scss
+++ b/app/javascript/homeland/_vars.scss
@@ -22,6 +22,8 @@ $yellow: #fee209;
     --green: #19a302;
     --green-light: #f4fff2;
 
+    --divider-color: rgba(0, 0, 0, 0.05);
+
     // speical vars
     --btn-default-text-color: #202020;
     --btn-default-background-color: #fcfcfc;
