--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -18,6 +18,8 @@
     --green: #19a302aa;
     --green-light: #f4fff217;
 
+    --divider-color: rgba(255, 255, 255, 0.05);
+
     --btn-default-text-color: #a9a9a9a8;
     --btn-default-background-color: #3d3d3d99;
     --btn-default-border-color: #1c1c1d;
