--- a/app/javascript/homeland/_vars.scss
+++ b/app/javascript/homeland/_vars.scss
@@ -89,6 +89,9 @@ $yellow: #fee209;
 
     --scrollbar-thumb-color: #ccc;
     --scrollbar-track-color: #e5e5e5;
+
+    --nav-pills-active-background-color: #2275da;
+    --nav-pills-active-text-color: #fff;
 }
 
 $spacer: 15px;
