--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -79,6 +79,9 @@
 
     --scrollbar-thumb-color: #333333aa;
     --scrollbar-track-color: transparent;
+
+    --nav-pills-active-background-color: #9e9e9e36;
+    --nav-pills-active-text-color: #fff;
   }
 
   a {
