--- a/app/views/settings/_menu.html.erb
+++ b/app/views/settings/_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-2 col-md-offset-1 setting-menu">
   <div class="card">
     <%= render_list class: "nav nav-pills flex-column nav-stacked" do |li|
-      li << link_to(icon_tag('user-circle', label: '基本信息'), setting_path, class: "nav-link")
+      li << link_to(icon_tag('user-circle', label: '基本设置'), setting_path, class: "nav-link")
       li << link_to(icon_tag('address-card', label: '详细资料'), profile_setting_path, class: "nav-link hide-ios")
       li << link_to(icon_tag('qrcode', label: '打赏'), reward_setting_path, class: "nav-link hide-ios")
       li << link_to(icon_tag('cog', label: '账户设置'), account_setting_path, class: "nav-link hide-ios")
