Fix dark mode css for .btn-move-page

--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -154,6 +154,12 @@
     }
   }
 
+  .move-page-buttons {
+    .btn-move-page {
+      background: #151516;
+    }
+  }
+
   .page-pages h1 {
     color: #fff !important;
   }
