修正 Rails 6.1.0.rc2 以后，form_with 的 remote: true 无法生效导致无法提交的问题

--- a/app/views/settings/account.html.erb
+++ b/app/views/settings/account.html.erb
@@ -7,7 +7,7 @@
         <div class="card-section delete-account">
           <div class="heading">删除我的账号</div>
 
-          <%= form_with(model: @user, url: setting_path, method: :delete) do |f| %>
+          <%= form_for(@user, url: setting_path, method: :delete) do |f| %>
             <%= render "shared/error_messages", :target => resource if params[:by] == "destroy" %>
             <input type="hidden" name="by" value="destroy" />
             <div class="form-group">
