--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -17,7 +17,7 @@ new_comment = Comment.new(commentable_type: commentable.class.name, commentable_
 <% if @current_user %>
   <div id="<%= commentable.class.name %>_<%= commentable.id %>_cell_new_comment" class="cell_comments_new card">
     <div class="card-header">发表新评论</div>
-    <%= form_with(model: new_comment, remote: true, html: { class: "card-body" }) do |f| %>
+    <%= form_for(new_comment, remote: true, html: { class: "card-body" }) do |f| %>
       <%= f.hidden_field :commentable_type %>
       <%= f.hidden_field :commentable_id %>
       <div class="form-group">
